<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_background"
    android:orientation="vertical"
    android:padding="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/posterImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/loading" />

        <LinearLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/posterImageView"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/plotTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="This is a good movie with a nice plot, maybe a bit long but still a pretty great movie. The goal is obviously to make it as big as possible to see how it is rendered on the view."
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:id="@+id/ratingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ratingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:text="@string/rating"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/releaseDateDisplayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/release_date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/releaseDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/releaseDateDisplayTextView"
                    android:text="10/10/2010"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent" />

                <ImageButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/releaseDateTextView"
                    android:background="@null"
                    android:src="@drawable/empty_star"
                    android:text="Favorite" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reviewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_review" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reviews"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:id="@+id/trailersTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/trailers"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAccent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/trailersGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout>